Add 'javaModules' and 'enablePreview' options
They correspond to AJC/ECJ/Javac parameters '--enable-preview' and
'--module-path'.

A few minor code clean-ups are also included.